--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>jdraw</groupId>
     <artifactId>JDraw</artifactId>
-    <version>0.2</version>
+    <version>0.2-Stable</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
